Flexbox bug on safari

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -391,6 +391,7 @@ p {
   width: 100%;
   max-width: 25rem;
   display: flex;
+  flex: 1;
 }
 
 .screenshot {
